--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <title> welcome </title>
   </head>
    <body>
-    <h1> welcome to jenkins ... ! |
+     <h1> welcome to jenkins ... ! | </h1>
     </body>
 
 <html>
